not working lots of errors